# ChangeLog for dev-python/python-levenshtein
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-levenshtein/ChangeLog,v 1.20 2014/02/08 06:43:11 patrick Exp $

*python-levenshtein-0.11.2 (08 Feb 2014)

  08 Feb 2014; Patrick Lauer <patrick@gentoo.org>
  +python-levenshtein-0.11.2.ebuild:
  Bump

*python-levenshtein-0.11.1 (03 Dec 2013)

  03 Dec 2013; Patrick Lauer <patrick@gentoo.org>
  +python-levenshtein-0.11.1.ebuild:
  Bump

  05 Sep 2013; Michał Górny <mgorny@gentoo.org>
  python-levenshtein-0.10.2-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  14 Aug 2013; Michał Górny <mgorny@gentoo.org>
  -python-levenshtein-0.10.2.ebuild, -python-levenshtein-0.10.ebuild,
  python-levenshtein-0.10.2-r1.ebuild:
  Add missing setuptools dep, QA fixes, drop old.

  22 May 2013; Agostino Sarubbo <ago@gentoo.org>
  python-levenshtein-0.10.2-r1.ebuild:
  Stable for ia64, wrt bug #470456

  20 May 2013; Agostino Sarubbo <ago@gentoo.org>
  python-levenshtein-0.10.2-r1.ebuild:
  Stable for x86, wrt bug #470456

  19 May 2013; Agostino Sarubbo <ago@gentoo.org>
  python-levenshtein-0.10.2-r1.ebuild:
  Stable for amd64, wrt bug #470456

*python-levenshtein-0.10.2-r1 (17 Apr 2013)

  17 Apr 2013; Ian Delaney <idella4@gentoo.org>
  +python-levenshtein-0.10.2-r1.ebuild:
  migration -> distutils-r1

  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org>
  python-levenshtein-0.10.2.ebuild:
  Stable for ia64, wrt bug #436876

  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
  python-levenshtein-0.10.2.ebuild:
  Stable for amd64, wrt bug #436876

  24 May 2012; Johannes Huber <johu@gentoo.org>
  python-levenshtein-0.10.2.ebuild:
  Stable for x86, wrt bug #410859

  21 Feb 2012; Patrick Lauer <patrick@gentoo.org>
  python-levenshtein-0.10.2.ebuild, python-levenshtein-0.10.ebuild:
  Restricting jython

*python-levenshtein-0.10.2 (16 Sep 2011)

  16 Sep 2011; Jesus Rivero <neurogeek@gentoo.org>