@@ -1,9 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX genextdoc.py 7030 SHA256 dbead639bf081a8016a5abddf91a24ff3da8ef825a7fa7c5dc37a16da7fd0be8 SHA512 414f565012266a75a81c57ae8c548710f39299b297c047cfec22688e513e39f2134515de3f6f81cf36ade4b08574db8020eab039a61fa5c383edb983d07fea44 WHIRLPOOL aaf4a39a939fec238643f1a534f265ff3818d264f694049c7a0845988c9bd0cf37be30c36cd684bd603b19a9585bf35bac28c7ef5d0c531fb3fe7c46e884bc5a
 DIST python-Levenshtein-0.10.2.tar.gz 45023 SHA256 49a3b3c3210157e2070eb46c0713e64f409efc8c9a7520632ddf16f8a9508bed SHA512 a5ad8e0f58f899152166683d4d38fa2df68150743631db282eeb1cfd29d8e3d0ddf83a4543d4322d1f29ff485ebc9d2605d1f25b5adfbad4c62be746812ff65d WHIRLPOOL 420e47c3d5da3ee833423668e6883e005659b16ec433143064498a5e2f85f0cc398a7e6654c5e6857810ff690836a72ed0c1f040d3dc485ab58f8570d91fb22a
 DIST python-Levenshtein-0.11.1.tar.gz 35270 SHA256 7c194ae48457951b42e66188d9315ac28ed43d68ecc995fd82c1975ed1fbdd0e SHA512 335f29253ec7bba8d54881dfe093ac194626cdaad0cc6ed08327917d6187cdfe1fbb3d003744f991587f8dc800aa1d361e3aa0b276b31ecfe7a43d83ea0d660b WHIRLPOOL 34053f03dc123bb60a5a936b56d19cf8238c9c6f443e6643525ea467bd7e9a9bbffbc597481f1426a614077938f98718c0e1e6138f968dced49cc865bc214d7d
 DIST python-Levenshtein-0.11.2.tar.gz 45458 SHA256 c1311c71beb5b6eecea4bba200a626331ef67110357448be47ba1bfe3c4aa305 SHA512 67d701e841c9a846948a1f2c70ea06c6473e3ae1437f73df2a2747d576024889a12e00c4a61e95b6c14826554b1ebaf65375cf5be4f26df3b208568403192bf3 WHIRLPOOL 5acbb305efeebd56ce79256efdef870f5ef92832e0b7f6b5b4d7d569c1e51821def06ac0a9ddfa165211b129f109e1089a3982b004a7a1982c93e5ca09aa2c89
 EBUILD python-levenshtein-0.10.2-r1.ebuild 1076 SHA256 f92c1802c3959fa1beb8431ff92d46f32f9d15462776388ff0a11acc872d01a3 SHA512 448f3bd56147dcfb24586d07abb2647ace8a0641967ee0ebc54369f53f8c802278bf2eee97607b182f2c60c020d511cec881bdd9ec246b957694a6c60e4572d4 WHIRLPOOL 34f5cc6120dffb74c2d0b33106e375d8828b6f916853b1be90738542dc48339c28b65248d8ecd8f4ec91747bb5c9601da0b3f7f4219852dcdf02a4dbd09873a8
 EBUILD python-levenshtein-0.11.1.ebuild 1077 SHA256 e1ccf532c60a39f621e76e6d1352e2bb6fb1bff33bfb70a9663596b76fcf9b22 SHA512 e86f0a0d975517f86f7b775844f7073858fbffe3e59590aa4c372510afb9da74b41107968d4123a3745db26ac6cc5dd83835dcc86c880305cd9eb87cb0ac42b0 WHIRLPOOL bc0610ea0b6ac5bea1e12c5aa3cd0a9d74b8e4e920a79287a1da7feea2bbd234297028f96ac6679adb7d0f5f4d1f44dbd45feec42fa4999c9f4faba2d4fc6df3
-EBUILD python-levenshtein-0.11.2.ebuild 1077 SHA256 fd35f24965bcd890126f0306a55da3c2f645ed2825b8b00eea4bd4ecead24a0a SHA512 24becb6980b94e3772d97ba90dade9b775883f222bb9d243864daece4cfd1ef9bf68de7a3353aa69e59e7f7eda7a1932f071f5811141eb3aefca08118d3d12ba WHIRLPOOL cb2c2a5c32118fd02d73dd37d0436058d57830d1deead28294b1f4b86a788b79a452e81514fedb27c3d13bc38968f8e461089a22e104d3c85901b28dedc842ff
-MISC ChangeLog 2720 SHA256 c3c23880e8c82fec551f4ef481df5450b9732a34c1ccff5183cdf90369f2775c SHA512 aacb1c2185e6872219809782bbe131502cdbf165239bae79acd9a3d62a2a04ba6edc3cde2fe83c49c44577638fee72c5a27f6d1cc2670a6e19552aac4f0fa0aa WHIRLPOOL db4812c5e384f812826b1aa93c261a690e304975c4bbc1ad05260ce44409fbdef328a7a09efac8a57c15ceba23855aad0670468f791b04104463643c7f08e157
+EBUILD python-levenshtein-0.11.2.ebuild 1243 SHA256 c1c00e973659d196ee8fffaac9ac0fee6ba9f9b11404cfe4a4ff5045ab81ec38 SHA512 dc4bbfa17c5e9e09b38be823a542ac18d0fddc794d26419dd5575483b54adea23731236ce9d9601a9d68dc193181bd5fe034682c53ce3cd168fe42c99c197c4b WHIRLPOOL ee357a63e0a5693048d753dc72c88d74de202295b4bab4a38aab5f33ea6fdf1b34de248443b41692d6c4db834ce131db7f1aff049850950948eec7155fcd8ee8
+MISC ChangeLog 2865 SHA256 8310b045bb78883809e1535c443ea1857ddbef72b645bac4cba9d63a99931d02 SHA512 95945ef27380bf80951ceae94bde89accf4c27e4a171d4b5750495db637ce9ab6e0482f883f07501a33a0282ec29a6241de0800bae4b0b7c75ac1aed17362946 WHIRLPOOL d4b55d979866892b6ea6e1c139d4e96f546389d00674c0ad2d201b164cdbb2cbedfbf05bf12ce5eb99e966e4bdfff6793ac063159e5ca620d66adb22883e76f6
 MISC metadata.xml 241 SHA256 f5507fe1a89465825fa4097be097da3f6634332ea6a609e8f66997e5b186c3e2 SHA512 ff48f06c48b65918b4f01aafeeaab166cae2a1f4a2ad96477e7901bb4aa15d3070dbd63b1cafe202a1fe338e7021afc6af02610cf0d7387252704889eb6d6a8b WHIRLPOOL ac260ce395deb8381f9108be2e124d717216b5ae5abb2b7a7980030b5bd64334e4c35c86fcbd45c4e02707b549e67f33c2eee77f8671668085242449ce50b957
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlM3zAcACgkQso7CE7gHKw3p3gCfZ6epnIMxjpazAx6+vsSECsRy
+LREAnAwmiX6X6Qa6TfC2cpRtK5UGF70S
+=PmdQ
+-----END PGP SIGNATURE-----
