@@ -3,7 +3,7 @@ Hash: SHA256
 
 AUX mpd-0.16.conf.patch 2646 SHA256 5994735065e0e4a8b9b0fbb7ff8219088b7015c573a379dfeacecdfe55834653 SHA512 9a6cd76d0327d30063659084e72005c85c7a9541c93bacfec098bce93839040ec6da78da9bd4beb5dcb1625c7b0ac6d0cb3f42ca5e7313f0a05cd46286f0c9a1 WHIRLPOOL 06639909305319b818b8fa008bcaeb29b54b70403a4119d627b3d7eda56bdf3a9b246fb5f68bbabe1f52a65d78fb39058ce87f03aeb98f1fd34dec505f84e353
 AUX mpd-0.17.4-ffmpeg2.patch 572 SHA256 d525dd6abc07577c54355dd2eb0721cda2b66c8250dbf97494ed8fc07d30a048 SHA512 72c9cab4ecb8479a3b22b3b571ed0cd22317d331a2016b6e8f357f379b46595b6c01096bb8a51a28c9d62542cfb0ceb61a7363792e85a5cb01334b4f965ae3a8 WHIRLPOOL 79383eae9cf4e95d18c5e1278056b83e32373f549c2ecf3855696ef0e1c5e9c18d9ec79f02847f141100021ed52228e8ac2802e51f3f0a28dbe181b971ca6e41
-AUX mpd.init 822 SHA256 210dc0904dac93bc619566f7f3b4a7bfd072392811f83b35781a8f26f611ea06 SHA512 c474f882816c621265b852ce244f097c8e7f400b263dd3469a05a9fdda17ed5671d3d3b0d70812672b5c773a0f4d776c1ba8ad968ccd376839543d74f64c055d WHIRLPOOL 40e6021e1c464d07304904913a1831b53dfc69adc381631a713a1acd1a9f4f208894b07320c39242e5a0f4a3569547ac1a93741f46d29f3acd74655c956ef991
+AUX mpd.init 836 SHA256 aa4156c9941aba452a9a53e17a8731063bb6c7f6ce4d67fe289502847e70d8b0 SHA512 de8dcede929d9785d6da904d38a985feb3091d2962d0ca0c294aa5e3a2a1e693f58d0ae1bc7cd339b8dadd751e6fbaf1f044b5677a82614457c13290ef94c5fe WHIRLPOOL bc382e87d4f85a565107e2f4bb0bcc32d2dd4b6368a9ea622bd2672ac2f0721dfb37ff555768d7e1466e1d9056c398afa6c6911e8a70994f81bddc2bb13316e3
 AUX mpd.logrotate 131 SHA256 18b3e7cb82984a846737494393edbebacfc7d06b79fddda5cd17d1710134f686 SHA512 39b7f58a2b7b50afdbb6d0a3a5e4f323b97ed1c59b37d238cdf7664ed0471f88b5592bccf49a6446d0d1ff4ffe7af3fdb6210e0024557e72fb9f79c3f4021561 WHIRLPOOL 9b2f6e46c787e617a12053914321b51dd5e6d382193fec610245e23a20654e6802a6d727202d038e36d1b9054c3be6487398b159fc5a741e3071b812df4333d5
 DIST mpd-0.17.6.tar.bz2 585951 SHA256 9788948175157dc1c4da4a7d36e04a4b4812cb3a79f6b935e4fc9f93cb60c332 SHA512 014629b913e7bd537f38303ffee295648b55fe18dc0ea669b463b82c3d60334792eeedb624f96849c834cf32e0bb5107f804e59d62be293ff78d3d940dbbb9e2 WHIRLPOOL dee52fe02174b3818ce4483385b7b91e0667fddfd4912023551032b29a67b80a9d3aba2f2d49781266eceb25d5af2c3fe1285f46ad1513cafcd0f5d3766d2705
 DIST mpd-0.18.8.tar.xz 583812 SHA256 5366378e548fb77996cc33b0e15165ddd84f1e496bdd04616bd593aecdc26450 SHA512 a6f540813b3f91c74645d3903a0b36edd1546880bfa7d1c06f2cb61b37e9c1e343b03ff06a685c4ded796a7f486b19e89849ca43f2b978c839b72eb0be184f34 WHIRLPOOL 24d1703fd7537bee7eb422b81b4f4c371df84a6a8d50fec1b5eaee2851f2c7c03f44ed1ab3d99a97ff4fe1c36158ea06c2829629914cff03b78d8d68f328f715
@@ -11,12 +11,12 @@ DIST mpd-0.18.9.tar.xz 584328 SHA256 0d4d3e6977cb607419abbb14c63d1e2b982acb84cd2
 EBUILD mpd-0.17.6.ebuild 6308 SHA256 d1f9f9e12f74c5fda255aebd3e994f43511c48b17e9289791a6c470f4c6cd721 SHA512 cbd8aaf31b04821151607e0827c159808b0b681f7e991d6d10322a7d8151b35346b53b9b942a8e24254e812f67bac0bd83c7c82c4c3251cb3b0defe5346e3864 WHIRLPOOL 977ab20709e003002d8a415a003a07b498e8329da89dccd0a1988a30f4019159f752681e0e13f2b84fe2e40d8f683576c3e05e9c0e2e87bcc7ce83d8d4f4a958
 EBUILD mpd-0.18.8.ebuild 6290 SHA256 390dfa9d9455cc944f0cb411696f144aefc496b2c3610ecc4e66d44da41e6cc3 SHA512 a84687b48c4395eecb841f6ca486fda392c6f504fbede1341949bc45e36ea7ba79ab49dc468f29c7e7249ff123d2a5eec9b8ae2f3aa192e3a0a8d33b5d74dd37 WHIRLPOOL 2917f620861b3cf9d9f1c605f38e29b49b991eb6b62a04226df67e773e0491fb74eca22e94b8e64918de7bb77d49674620d6c5c3efae4bb56cb66f5077d51a2b
 EBUILD mpd-0.18.9.ebuild 6290 SHA256 3981fa0b502bf632e60e0dfd6b4ac65e2bd314f67583432d66c400706a4b9ebb SHA512 2d42b3c465b3acc60fc98e3d9c76b7aa680c3ba938e550cc90437f0877437a92804d32fa8660ae4bbf3fd667946b03cecc492ea7a400e81d486d43624eb9d503 WHIRLPOOL 09d631885aa0aba9226701abe194b86739d597ecb8c6c7eba6c05dea1b6811dfd9da9759a9691c0394ef2b204b14a6d0a27ed4414b059f804f36fdbb4e5fd11c
-MISC ChangeLog 48265 SHA256 306a1378b8a184c222a71dce4c7c26cc5d0696fc5912adcd9b2471b874eee96f SHA512 32aba04d8690923bea4ac5a0453a5d259ef2eb46448c4d7b76ee17ea7d0eca94c98c184f7b6e84b7b2bae6cde7bade0382fc9d948fc69dd7e72f34961f4c204d WHIRLPOOL 12e760fc4341efb9f941a826bbe7b994f294f3ad53fae56824fa2f068e1b5e52bd2ef1cff488fb48c36e9f527a6e126e3732c96f334a1c16c064137733c4b0a1
+MISC ChangeLog 48389 SHA256 fbf11165487c46bcb23c0f35a6db3882559821c635e332cabebd27b45a5ef76d SHA512 df6f6885a9cc3e8cc404891416d205c563064f58fc2fee74cdbc3dfabe88dd8acbb66e4635a3b63207f17efdbb51665cb18479f1985c20e306653d6519f66804 WHIRLPOOL 293668156ec68edaae05124b115f2097a1d6bf0d63da2b88cda7c3195fb2346d4431e3c24aafa9a5d763e99a7de66cd3954404b683186275ba1f0ff1cd90b6cf
 MISC metadata.xml 2057 SHA256 03ab12c4339334c9925649d19c61844c14600680d33b83736922b4537b94515c SHA512 71f55e89be531d5e1aa32182b8348899b87dfa3ef13782f52cc39748cce307273b714975016e2737d4e9941f2f4e71f31d6b38856eb5a9f1c1d33b2afc28fbb6 WHIRLPOOL 160272fbeffa01fbec0fc5bbb75f643cc4540def81f6e31bde450e18865bf43a6a329890db0bb8d3c6a22fdd740c1c1bf213cf87bc54fe103c7fadcba892a9d6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlMts3IACgkQmWq1bYTyC0PdwAD/csub7dh9TfGZnSTKc9SmoByk
-bZGvVmMV7odwmtTvqSsA/0D5Cj9wzVKgYyxwhyQQXkQui/x/l3+RcMOXcT8xxRtx
-=B5Rh
+iF4EAREIAAYFAlM3y5cACgkQmWq1bYTyC0PvdwEAnr6abvZxbuM+v6iaTTRYdJO7
+xpzjXiUwqOOMao8X6tkA/0spUR1oNL29aCbXzJf+3/cTbMqYA3t+96tTFO3vb9gl
+=iJwh
 -----END PGP SIGNATURE-----
