@@ -1,7 +1,7 @@
 #!/sbin/runscript
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/files/mpd.init,v 1.3 2013/07/02 14:24:32 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/files/mpd.init,v 1.4 2014/03/30 07:45:26 angelos Exp $
 
 depend() {
 	need localmount
@@ -21,7 +21,7 @@ start() {
 	checkconfig || return 1
 
 	ebegin "Starting Music Player Daemon"
-	start-stop-daemon --start --quiet --background --exec /usr/bin/mpd --pidfile /var/run/mpd.pid --make-pidfile -- --no-daemon /etc/mpd.conf 2>/dev/null
+	start-stop-daemon --start --quiet --background --wait 50 --exec /usr/bin/mpd --pidfile /var/run/mpd.pid --make-pidfile -- --no-daemon /etc/mpd.conf 2>/dev/null
 	eend $?
 }
 
