@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/python-levenshtein
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-levenshtein/ChangeLog,v 1.20 2014/02/08 06:43:11 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-levenshtein/ChangeLog,v 1.21 2014/03/30 07:54:24 idella4 Exp $
+
+  30 Mar 2014; Ian Delaney <idella4@gentoo.org>
+  python-levenshtein-0.11.2.ebuild:
+  Add py3 support (except for doc build), fixes Bug #493998
 
 *python-levenshtein-0.11.2 (08 Feb 2014)
 
